--- a/docs/database/Serverless.ipynb
+++ b/docs/database/Serverless.ipynb
@@ -307,7 +307,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File() as h5:\n",
+    "with h5tbx.File() as h5:\n",
     "    h5.attrs['project'] = 'tutorial'\n",
     "    h5.create_dataset('velocity', data=[1,2,-1], units='m/s', standard_name='x_velocity')\n",
     "    g = h5.create_group('sub')\n",
@@ -358,7 +358,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(filename) as h5:\n",
+    "with h5tbx.File(filename) as h5:\n",
     "    print('find basename=velocity in root:')\n",
     "    pprint(h5.find({'$basename': 'velocity'}, '$dataset'))\n",
     "    \n",
@@ -393,7 +393,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(filename) as h5:\n",
+    "with h5tbx.File(filename) as h5:\n",
     "    pprint(h5.find({'$basename': {'$regex': 'sub'}}, '$group', rec=False))"
    ]
   },
@@ -420,7 +420,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(filename) as h5:\n",
+    "with h5tbx.File(filename) as h5:\n",
     "    pprint(h5.find_one({'$basename': 'velocity'}, '$dataset'))"
    ]
   },
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(filename) as h5:\n",
+    "with h5tbx.File(filename) as h5:\n",
     "    pprint(h5.find({'$shape': (5,)}, '$dataset'))\n",
     "    pprint(h5.find({'$ndim': 1}, '$dataset'))"
    ]
