--- a/docs/database/h5mongo.ipynb
+++ b/docs/database/h5mongo.ipynb
@@ -406,7 +406,7 @@
     "\n",
     "filename = h5tbx.generate_temporary_filename()\n",
     "\n",
-    "with h5tbx.H5File(filename, 'w') as h5:\n",
+    "with h5tbx.File(filename, 'w') as h5:\n",
     "    ds_trg = h5.create_dataset('digit',\n",
     "                               data=digits.target,\n",
     "                               units='',\n",
@@ -477,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5File(filename) as h5:\n",
+    "with h5tbx.File(filename) as h5:\n",
     "    h5['images'].mongo.insert(0, collection, update=False)"
    ]
   },
@@ -582,7 +582,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "with h5tbx.H5File(filename) as h5:\n",
+    "with h5tbx.File(filename) as h5:\n",
     "    plt.figure(figsize=(4,3))\n",
     "    h5.images.mongo.slice(one_res['slice']).plot(cmap='gray')"
    ]
@@ -814,7 +814,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5File(filename) as h5:\n",
+    "with h5tbx.File(filename) as h5:\n",
     "    h5.mongo.insert(collection_full_digits, recursive=True)"
    ]
   },
