--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Create an HDF file\n",
     "\n",
-    "To work with HDF5 files, the \"wrapper\"-class `H5File` is used (aquivilant to `h5py.File`)."
+    "To work with HDF5 files, the \"wrapper\"-class `File` is used (aquivilant to `h5py.File`)."
    ]
   },
   {
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "h5 = h5tbx.H5File()\n",
+    "h5 = h5tbx.File()\n",
     "print(h5.mode)\n",
     "h5.close()\n",
     "print(h5.hdf_filename.name)"
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "h5 = h5tbx.H5File(h5.hdf_filename)\n",
+    "h5 = h5tbx.File(h5.hdf_filename)\n",
     "h5.close()\n",
     "try:\n",
     "    print(h5.filename)\n",
@@ -111,7 +111,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File('test.hdf', 'w') as h5:\n",
+    "with h5tbx.File('test.hdf', 'w') as h5:\n",
     "    print(h5.hdf_filename.name)"
    ]
   },
