--- a/docs/wrapper/DatasetSlicing.ipynb
+++ b/docs/wrapper/DatasetSlicing.ipynb
@@ -427,7 +427,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File() as h5:\n",
+    "with h5tbx.File() as h5:\n",
     "    dsx = h5.create_dataset('x', data=np.linspace(0, 10, 5),\n",
     "                            attrs=dict(units='mm', long_name='x'),\n",
     "                            make_scale=True)\n",
@@ -469,7 +469,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    arr = h5['data'].values[:]\n",
     "arr"
    ]
