--- a/docs/wrapper/GroupCreation.ipynb
+++ b/docs/wrapper/GroupCreation.ipynb
@@ -36,7 +36,7 @@
    },
    "outputs": [],
    "source": [
-    "with h5tbx.H5File() as h5:\n",
+    "with h5tbx.File() as h5:\n",
     "    h5.create_group('mygrp')\n",
     "    h5.create_group('mygrp', overwrite=True)"
    ]
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5File() as h5:\n",
+    "with h5tbx.File() as h5:\n",
     "    h5.create_group('mygrp', attrs=dict(one=2, two='a second attr'))\n",
     "    \n",
     "    # create the same group again but indicate that only the attributes should be overwritten:\n",
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    print(h5.get_groups())"
    ]
   },
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    print(h5.find({'$name': {'$regex': '.*'}}, rec=False))"
    ]
   },
@@ -151,7 +151,7 @@
     "    h5.attrs['__version__'] = '0.1.12'\n",
     "    test_filename = h5.filename  # or h5.hdf_filename\n",
     "\n",
-    "with h5tbx.H5File(test_filename) as h5:\n",
+    "with h5tbx.File(test_filename) as h5:\n",
     "    print(h5.check())"
    ]
   },
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(test_filename) as h5:\n",
+    "with h5tbx.File(test_filename) as h5:\n",
     "    h5.layout.sdump()"
    ]
   },
