--- a/docs/wrapper/NaturalNaming.ipynb
+++ b/docs/wrapper/NaturalNaming.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Natural Naming\n",
     "\n",
-    "`h5RDMtoolbox` supports attribute style access (natural naming) on datasets, groups and attributes instead of the known dictionary style. This means that HDF objects must not be named as existing attributes of used instances, e.g. `H5File`."
+    "`h5RDMtoolbox` supports attribute style access (natural naming) on datasets, groups and attributes instead of the known dictionary style. This means that HDF objects must not be named as existing attributes of used instances, e.g. `File`."
    ]
   },
   {
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File() as h5:\n",
+    "with h5tbx.File() as h5:\n",
     "    ds = h5.create_dataset('test', shape=(3,))\n",
     "    print(h5.test)"
    ]
@@ -92,12 +92,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'H5File' object has no attribute 'test'\n"
+      "'File' object has no attribute 'test'\n"
      ]
     }
    ],
    "source": [
-    "with h5tbx.H5File() as h5:\n",
+    "with h5tbx.File() as h5:\n",
     "    ds = h5.create_dataset('test', shape=(3,))\n",
     "    try:\n",
     "        print(h5.test)\n",
