--- a/docs/wrapper/wrapper_and_conventions/cflike.ipynb
+++ b/docs/wrapper/wrapper_and_conventions/cflike.ipynb
@@ -51,12 +51,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'h5rdmtoolbox.H5File' convention: cflike>\n"
+      "<class 'h5rdmtoolbox.File' convention: cflike>\n"
      ]
     }
    ],
    "source": [
-    "h5 = h5tbx.H5File()\n",
+    "h5 = h5tbx.File()\n",
     "print(h5)\n",
     "h5.close()"
    ]
@@ -79,7 +79,7 @@
     "**standard_name and long_name**<br>\n",
     "For the sake of improved readability and interpretability we suggest to use `long_name` or `standard_name` as additional attributes. While `long_name` is human-readable and interpretable attribute, `standard_name` is intended to be read by a machine (other software). This allows to automate exploration and processing work.\n",
     "\n",
-    "The `standard_name` generally should not be chosen freely but must follow a certain convention. Such a naming convention may be defined by a project or a community, e.g. the climate and forecast community [cfconventions.org], from which the concept of standard names is adoped. A convention is described in an **XML** file and associated with the wrapper file `H5File`. Again this is adoped from [cfconventions.org]. The XML file contains the standard name, a description for each one and the respective unit. Thus, if a convention is associated with a wrapper class, the standard name and unit cannot be freely be chsen but is verified."
+    "The `standard_name` generally should not be chosen freely but must follow a certain convention. Such a naming convention may be defined by a project or a community, e.g. the climate and forecast community [cfconventions.org], from which the concept of standard names is adoped. A convention is described in an **XML** file and associated with the wrapper file `File`. Again this is adoped from [cfconventions.org]. The XML file contains the standard name, a description for each one and the respective unit. Thus, if a convention is associated with a wrapper class, the standard name and unit cannot be freely be chsen but is verified."
    ]
   },
   {
@@ -324,7 +324,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(title='MyFile') as h5:\n",
+    "with h5tbx.File(title='MyFile') as h5:\n",
     "    h5.dump()"
    ]
   },
@@ -351,7 +351,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(title='MyFile') as h5:\n",
+    "with h5tbx.File(title='MyFile') as h5:\n",
     "    print(h5.standard_name_table)"
    ]
   },
@@ -633,7 +633,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(title='MyFile') as h5:\n",
+    "with h5tbx.File(title='MyFile') as h5:\n",
     "    h5.create_dataset('u', data=1.2, units='m/s', standard_name='x_velocity')\n",
     "    h5.create_dataset('v', data=[1,2,3], units='m/s', standard_name='y_velocity')\n",
     "    h5.create_dataset('method', data=\"linear_interpolation\",\n",
@@ -669,7 +669,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File() as h5:\n",
+    "with h5tbx.File() as h5:\n",
     "    h5.create_group('mygrp')\n",
     "    h5.create_group('othergrp', long_name='my other group')\n",
     "    h5.sdump()"
