--- a/docs/wrapper/Visualization.ipynb
+++ b/docs/wrapper/Visualization.ipynb
@@ -315,7 +315,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File() as h5:\n",
+    "with h5tbx.File() as h5:\n",
     "    dsx = h5.create_dataset('x', data=np.linspace(0, 10, 20), attrs=dict(units='mm', long_name='x'), make_scale=True)\n",
     "    dsy = h5.create_dataset('y', data=np.linspace(0, 5, 10), attrs=dict(units='mm', long_name='y'), make_scale=True)\n",
     "    dsz = h5.create_dataset('z', data=np.linspace(0, 3, 4), attrs=dict(units='mm', long_name='z'), make_scale=True)\n",
@@ -366,7 +366,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    # some plotting\n",
     "    plt.figure()\n",
     "    h5['data'][:].plot()\n",
@@ -396,7 +396,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    h5['data'][:].plot.hist()\n",
     "    plt.show()"
    ]
@@ -689,7 +689,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    h5.dump()\n",
     "    d = h5['data'][:, 0]\n",
     "    # d.plot.line(marker='o')"
@@ -714,7 +714,7 @@
    ],
    "source": [
     "from h5rdmtoolbox.wrapper import accessory\n",
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    ds = h5.Vector(u=h5.u, v=h5.v)\n",
     "    ds[2, :, :].plot.quiver(x='x', y='y', u='u', v='v')"
    ]
@@ -767,7 +767,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    vec =  h5.Vector(u=h5.u, v=h5.v, w=h5.w)\n",
     "    ipv_quiver = vec[:, :, :].ipyvolume.quiver(x='x',y='y',z='z',\n",
     "                                              u='u',v='u',w='u')\n",
@@ -805,7 +805,7 @@
     }
    ],
    "source": [
-    "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
     "    ipv_surf = h5.data[:].ipyvolume.plot()\n",
     "    ipv_surf.view(-10, -40, 2.5)\n",
     "    ipv_surf.show()"
